<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundtest"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="226dp"
        android:layout_height="92dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:srcCompat="@mipmap/ig" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="190dp"
        android:layout_height="36dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#9E9E9E"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute" />

    <EditText
        android:id="@+id/edtuser"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edtexts"
        android:ems="10"
        android:hapticFeedbackEnabled="false"
        android:hint="@string/edt1"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textColor="#000000"
        android:textColorHint="#C4C4C4"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:ignore = "Autofill"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/boton"
        android:shadowColor="#ffffff"
        android:text="@string/b1"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtp" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/txv1"
        android:textColor="#949494"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/txv2"
        android:textColor="#011899"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tv1"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="36dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/txv3"
        android:textColor="#4267b2"
        android:textStyle="bold"
        android:background="?android:attr/selectableItemBackground"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/tv1" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="17dp"
        android:layout_height="20dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv1"
        app:srcCompat="@mipmap/facebookpng" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="301dp"
        android:layout_height="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv3"
        app:srcCompat="@mipmap/o5" />

    <TextView
        android:id="@+id/tv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="20dp"
        android:text="@string/txv4"
        android:textColor="#949494"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <TextView
        android:id="@+id/tv5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="20dp"
        android:text="@string/txv5"
        android:textColor="#011899"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tv4"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv4"
        app:srcCompat="@mipmap/lineafb1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/txv6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        android:textColor="#949494"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txv7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/edtp"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/edt2"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtuser"
        android:background="@drawable/edtexts"
        android:padding="12dp"
        android:textColor="#000000"
        android:textColorHint="#C4C4C4"
        android:textSize="14sp"
        tools:ignore = "Autofill"/>

    <ImageButton
        android:id="@+id/nover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:alpha="0.4"
        android:background="@android:color/transparent"
        android:contentDescription="@string/img"
        android:onClick="ver"
        app:layout_constraintEnd_toEndOf="@+id/edtp"
        app:layout_constraintTop_toTopOf="@+id/edtp"
        app:srcCompat="@mipmap/noview2" />

    <ImageButton
        android:id="@+id/ver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/img"
        android:onClick="nover"
        app:layout_constraintEnd_toEndOf="@+id/edtp"
        app:layout_constraintTop_toTopOf="@+id/edtp"
        app:srcCompat="@mipmap/view3" />

    <TextView
        android:id="@+id/TVN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="24dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/spinner"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/TVP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVN"
        android:textColor="#000000"/>

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyle"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/boton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="77dp" />

</androidx.constraintlayout.widget.ConstraintLayout>