<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main5Activity"
    android:background="#ffffff">

    <TextView
        android:id="@+id/textView"
        android:layout_width="236dp"
        android:layout_height="66dp"
        android:layout_marginTop="32dp"
        android:text="@string/eligepass"
        android:textColor="#000000"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/datopass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:textColor="#949494"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/edtpass1"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edtexts"
        android:ems="10"
        android:hint="@string/pass1"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="#000000"
        android:textColorHint="#949494"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/edtpass2"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edtexts"
        android:ems="10"
        android:hint="@string/pass2"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="#000000"
        android:textColorHint="#949494"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtpass1"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/b1registro"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/boton"
        android:onClick="guardar"
        android:text="@string/guardarboton"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtpass2" />

    <ImageButton
        android:id="@+id/nover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:alpha="0.4"
        android:background="@android:color/transparent"
        android:contentDescription="@string/img"
        android:onClick="ver"
        app:layout_constraintEnd_toEndOf="@+id/edtpass1"
        app:layout_constraintTop_toTopOf="@+id/edtpass1"
        app:srcCompat="@mipmap/noview2" />

    <ImageButton
        android:id="@+id/ver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/img"
        android:onClick="nover"
        app:layout_constraintEnd_toEndOf="@+id/edtpass1"
        app:layout_constraintTop_toTopOf="@+id/edtpass1"
        app:srcCompat="@mipmap/view3" />

    <ImageView
        android:id="@+id/v1pass1"
        android:layout_width="13dp"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="164dp"
        android:contentDescription="@string/img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/visto" />

    <ImageView
        android:id="@+id/x1pass2"
        android:layout_width="13dp"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v1pass1"
        app:srcCompat="@mipmap/x" />

    <ImageView
        android:id="@+id/v2pass2"
        android:layout_width="13dp"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v1pass1"
        app:srcCompat="@mipmap/visto" />

    <ImageView
        android:id="@+id/x2pass1"
        android:layout_width="13dp"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="164dp"
        android:contentDescription="@string/img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/x" />

    <TextView
        android:id="@+id/tvregistrocompleto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/registrocompleto"
        android:textColor="#535353"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/tvcontraseñasincor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/contraseñasincorrectas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:textColor="#ff0000"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b1registro"
        android:textColor="#000000"/>

</androidx.constraintlayout.widget.ConstraintLayout>